<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateContact">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="90dp">

            <TextView
                android:id="@+id/text2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/editar_contacto"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="106dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="start">

                <TextView
                    android:id="@+id/txtNameUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nombre"
                    android:layout_marginEnd="20dp"
                    android:gravity="end|center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtNumberUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/numero"
                    android:layout_marginEnd="20dp"
                    android:gravity="end|center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCityUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ciudad"
                    android:layout_marginEnd="20dp"
                    android:gravity="end|center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescriptionUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/descripcion"
                    android:layout_marginEnd="20dp"
                    android:gravity="end|center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPhotoUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/foto"
                    android:layout_marginEnd="20dp"
                    android:gravity="end|center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editNameUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editNumberUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editCityUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editDescriptionUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/editPhotoUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <Button
                android:id="@+id/btnSaveUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/newcontact"
                android:layout_weight="1"
                app:backgroundTint="#AED6F1"
                android:text="@string/editar"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/btnCancelUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cancelbutton"
                android:layout_weight="1"
                app:backgroundTint="#AED6F1"
                android:text="@string/cancelar"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>